; ModuleID = '/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_shutdown.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdns_base = type { i32 }

@current_base = common dso_local global %struct.evdns_base* null, align 8
@evdns_log_fn = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evdns_shutdown(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.evdns_base*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.evdns_base*, %struct.evdns_base** @current_base, align 8
  %5 = icmp ne %struct.evdns_base* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.evdns_base*, %struct.evdns_base** @current_base, align 8
  store %struct.evdns_base* %7, %struct.evdns_base** %3, align 8
  store %struct.evdns_base* null, %struct.evdns_base** @current_base, align 8
  %8 = load %struct.evdns_base*, %struct.evdns_base** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @evdns_base_free(%struct.evdns_base* %8, i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  store i32* null, i32** @evdns_log_fn, align 8
  ret void
}

declare dso_local i32 @evdns_base_free(%struct.evdns_base*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
